--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 # client/.env
 
-VITE_API_BASE_URL=https://ai-music-store.onrender.com
+VITE_API_BASE_URL=http://localhost:8000
+# VITE_API_BASE_URL=https://ai-music-store.onrender.com
